--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -5,7 +5,8 @@ term=foot-extra
 #(or xterm-256color if built with -Dterminfo=disabled)
 # login-shell=no
 
-#font=RobotoMono Nerd Font Mono:size=8
+
+font=Cascadia Code:size=11
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
