more changes and rickard nvim

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,7 +1,7 @@
 # -*- conf -*-
 
 # shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
-term=foot-extra
+term=foot-extra 
 #(or xterm-256color if built with -Dterminfo=disabled)
 # login-shell=no
 
@@ -28,7 +28,7 @@ resize-delay-ms=50
 
 # bold-text-in-bright=no
 # bell=none
-# word-delimiters=,│`|:"'()[]{}<>
+ word-delimiters=,│`|:"'()[]{}<>
 # selection-target=primary
 # workers=<number of logical CPUs>
 
@@ -45,10 +45,10 @@ lines=10000
 # indicator-format=
 
 [url]
-# launch=xdg-open ${url}
-# label-letters=sadfjklewcmpgh
-# osc8-underline=url-mode
-# protocols = http, https, ftp, ftps, file, gemini, gopher
+ launch=xdg-open ${url}
+ label-letters=sadfjklewcmpgh
+ osc8-underline=url-mode
+ protocols = http, https, ftp, ftps, file, gemini, gopher
 
 [cursor]
 # style=block
@@ -90,7 +90,7 @@ bright7=ffffff   # bright white
 # urls=<regular3>
 
 [csd]
-# preferred=server
+preferred=client
 # size=26
 # color=<foreground color>
 # button-width=26
