--- a/logid.cfg
+++ b/logid.cfg
@@ -159,7 +159,7 @@ devices: ({
       cid: 0xc4;
       action = {
       	type: "Keypress"
-	keys: ["KEY_F13"]
+	keys: ["KEY_CAPSLOCK"]
       };
     }
   );
