--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -101,7 +101,7 @@
         "on-scroll-down": "playerctl previous"
     },
     "custom/weather": {
-        "format": " {}",
+        "format": "{}",
         "tooltip": true,
         "max-length": 40,
         "interval": 30, // Remove this if your script is endless and write in loop
