--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -60,7 +60,7 @@
     "pulseaudio": {
         //"scroll-step": 1,
         "format": "{volume}% {icon}",
-        "format-bluetooth": "{volume}% {icon}",
+        // "format-bluetooth": "{volume}% {icon}",
         "format-muted": "",
         "format-icons": {
             "headphones": "",
