--- a/sway/config
+++ b/sway/config
@@ -8,18 +8,6 @@
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
-output HDMI-A-3 pos 0 0
-output DVI-D-1 pos 1920 0
-
-workspace 1 output HDMI-A-1
-workspace 3 output HDMI-A-1
-workspace 4 output HDMI-A-1
-
-workspace 2 output DVI-D-1
-workspace 8 output DVI-D-1
-workspace 9 output DVI-D-1
-workspace 10 output DVI-D-1
-
 bar {
     swaybar_command waybar
     position top
@@ -143,7 +131,9 @@ set $pulseaudio $term_float pulsemixer
 # Example configuration:
 #
 exec swayidle -w \
+         timeout 300 'swaylock -f -c 000000' \
          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
+         before-sleep 'swaylock -f -c 000000'
 #
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
@@ -302,9 +292,7 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # exec --no-startup-id dbus-update-activation-environment --all
-exec systemctl --user import-environment XDG_SESSION_TYPE XDG_CURRENT_DESKTOP
-exec dbus-update-activation-environment WAYLAND_DISPLAY
-
+exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 exec foot --server
 exec ~/.azotebg
 exec autotiling
