--- a/sway/config
+++ b/sway/config
@@ -261,11 +261,11 @@ exec swayidle -w \
     # You can send windows there and get them back later.
 
     # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move scratchpad
+    bindsym $mod+Shift+Tab move scratchpad
 
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
+    bindsym $mod+Tab scratchpad show
 #
 # Resizing containers:
 #
@@ -292,14 +292,16 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # exec --no-startup-id dbus-update-activation-environment --all
-exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+exec systemctl --user import-environment XDG_SESSION_TYPE XDG_CURRENT_DESKTOP
+exec dbus-update-activation-environment WAYLAND_DISPLAY
+
 exec foot --server
 exec ~/.azotebg
-exec autotiling
 exec sworkstyle &> /tmp/sworkstyle.log
 exec greenclip daemon
 exec swaync
 exec logiops
+exec_always autotiling-rs
 exec_always '[ -x "$(command -v playerctl)" ] && pkill playerctl; playerctl -a metadata --format \'{{status}} {{title}}\' --follow | while read line; do pkill -RTMIN+5 waybar; done'
 
 #Autostart
@@ -307,7 +309,6 @@ exec --no-startup-id swaymsg "workspace 2; exec google-chrome-stable"
 
 exec --no-startup-id swaymsg "workspace 8; exec thunderbird"
 exec --no-startup-id swaymsg "workspace 8; exec rocketchat-desktop"
-exec --no-startup-id swaymsg "workspace 8; exec slack"
 
 exec --no-startup-id swaymsg "workspace 9; exec discord"
 exec --no-startup-id swaymsg "workspace 9; exec spotify"
